manifests/bogohttp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bogohttp
  name: bogohttp
  namespace: ocp-capabilities-demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: bogohttp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-07-13T20:22:19-04:00"
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: bogohttp
    spec:
      containers:
      - image: quay.io/dwinchell_redhat/bogohttp:v1.0.ppcle64
        imagePullPolicy: Always
        name: bogohttp
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            mem: "128Mi"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
