manifests/load-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k6-load-test
  namespace: ocp-capabilities-demo
spec:
  restartPolicy: Never
  securityContext:
    runAsNonRoot: true
    # runAsUser: 12345
    # fsGroup: 12345
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: k6
      image: docker.io/loadimpact/k6:master
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        # runAsNonRoot: true
        # runAsUser: 12345
      command: ["k6"]
      args: ["run", "/k6-scripts/load-test-k6.js"]

      volumeMounts:
        - name: k6-script-volume
          mountPath: "/k6-scripts"
          readOnly: true
  volumes:
    - name: k6-script-volume
      configMap:
        name: k6-load-test-script
