manifests/bogohttp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bogohttp
  name: bogohttp
  namespace: ocp-capabilities-demo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: bogohttp
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bogohttp
  name: bogohttp
  namespace: ocp-capabilities-demo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: bogohttp
    weight: 100
  wildcardPolicy: None
